--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
+    
+    
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
 
     background-color: #1c0285;
 }
@@ -35,6 +42,11 @@ th, td {
 .star-image {
     width: 20px;
     height: 20px;
+}
+.table-container {
+    padding: 20px;
+    max-width: 1200px; 
+    margin: 0 auto; 
 }
 
 
